manifests/perry/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: perry
  namespace: perry
spec:
  type: ClusterIP
  selector:
    app: perry
  ports:
    - name: http
      port: 8000
      targetPort: http
